<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".PlasticoFragment">

    <!-- ScrollView to make content scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <include
                android:id="@+id/include6"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Title TextView -->
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plastico"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/include6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <!-- Button to Show Description -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDescripcionPlastico"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Descripción del plástico"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/textView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cornerRadius="8dp"
                app:layout_constraintWidth_percent="0.9" />

            <!-- Images in two columns -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="0dp"
                android:layout_height="140dp"
                app:layout_constraintTop_toBottomOf="@id/buttonDescripcionPlastico"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/descripcion_imagen8"
                app:layout_constraintWidth_percent="0.45"
                app:srcCompat="@drawable/captura_de_pantalla_2024_08_28_154537" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="0dp"
                android:layout_height="140dp"
                app:layout_constraintTop_toBottomOf="@id/imageView8"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/descripcion_imagen9"
                app:layout_constraintWidth_percent="0.45"
                app:srcCompat="@drawable/_6528516_botellas_de_pl_stico_de_detergente_en_el_fondo_blanco_3d_productos_de_limpieza" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="0dp"
                android:layout_height="140dp"
                app:layout_constraintTop_toBottomOf="@id/buttonDescripcionPlastico"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/descripcion_imagen10"
                app:layout_constraintWidth_percent="0.45"
                app:srcCompat="@drawable/tapas" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="0dp"
                android:layout_height="140dp"
                app:layout_constraintTop_toBottomOf="@id/imageView10"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/descripcion_imagen11"
                app:layout_constraintWidth_percent="0.45"
                app:srcCompat="@drawable/plastic_bottles" />

            <ImageView
                android:id="@+id/imageViewSelected"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/button4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="centerCrop"
                android:contentDescription="Imagen seleccionada" />


            <!-- Ingresar Imagen Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btningresarimg"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/imageView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cornerRadius="8dp"
                app:layout_constraintWidth_percent="0.9" />

            <!-- Eliminar Imagen Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btneliminarimg"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/button4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cornerRadius="8dp"
                app:layout_constraintWidth_percent="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
